# Pulsar-Sample

./: .gitignore  Cargo.toml  setup.sh
libpulsar/: Cargo.toml  classes.drawio
libpulsar/src/: camera.rs  lib.rs  mesh.rs  renderer.rs  shader.wgsl
libpulsar/src/base/: actor.rs  mod.rs  object.rs
libpulsar/src/engine/: mod.rs
libpulsar/src/engine/render/: ctx.rs  mod.rs
libpulsar/src/math/: mod.rs
src/: main.rs
