[package]
name = "libpulsar"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "24.0.1", features = ["dx12", "metal"] }
winit = "0.30.8"
glam = "0.24"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
gltf = "1.3"
futures = "0.3"
raw-window-handle = "0.6.2"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
dynasty-rs = "0.1.0"
once_cell = "1.20.2"
uuid = "1.13.1"
